# kinopoisk-watched-to-exel

./: .gitignore  README.md  convert_to_csv.py  cretate_sqlite_db.py  main.py  parse_html.py  parse_watched_html.py  pyproject.toml  requirements.txt  save_html.py
