[tool.poetry]
name = "wasted-to-exel"
version = "0.1.0"
description = ""
authors = ["Earl Hikky <earl.hikky91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
openpyxl = "^3.1.2"
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
